# DLgrid_search_timeseriesforecasting

./: README.md  main.py  pyproject.toml  requirements.txt  resultados.txt  results10_07062024_205323.keras  results12_07062024_205323.keras  results2_07062024_205323.keras  results3_07062024_205323.keras  results4_07062024_205323.keras  results5_07062024_205323.keras  results9_07062024_205323.keras  settings.txt
datasets/: CEPEA_ACUCAR.csv  CEPEA_BOI.csv  CEPEA_MILHO.csv  CEPEA_SOJA.csv  CEPEA_SOJA_100.csv
results/07062024_205323/: results11_07062024_205323.keras  results1_07062024_205323.keras  results6_07062024_205323.keras  results7_07062024_205323.keras  results8_07062024_205323.keras  results_summary.xlsx
